# logging

./: .gitmodules  CMakeLists.txt  README.md
include/: logger.h
include/cpplogging/: logger.h  progress_meter.h
src/: logger.cpp
test/: CMakeLists.txt  logger_test.cpp  logger_test_macro.cpp
